// Copyright (c) 2022 Vitality South, LLC <chris@vitalitysouth.com>
// All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";
package magnoliafabrics;

option go_package = "github.com/Vitality-South/magfabrics-api/service";

import "api_inventory.proto";
import "api_fabric.proto";
import "api_taxonomy.proto";
import "cleaning_code.proto";
import "api_discontinued_fabric.proto";

service MagnoliaFabricsService {
	rpc GetAllFabrics(GetAllFabricsRequest) returns (GetAllFabricsResponse) {}
	rpc GetAllFabricsWithoutInventory(GetAllFabricsWithoutInventoryRequest) returns (GetAllFabricsWithoutInventoryResponse) {}
	rpc GetAllInventory(GetAllInventoryRequest) returns (GetAllInventoryResponse) {}
	rpc GetFabricByID(GetFabricByIDRequest) returns (GetFabricByIDResponse) {}
	rpc GetFabricByName(GetFabricByNameRequest) returns (GetFabricByNameResponse) {}
	rpc GetFabricBySKU(GetFabricBySKURequest) returns (GetFabricBySKUResponse) {}
	rpc GetAllFabricTaxonomy(GetAllFabricTaxonomyRequest) returns (GetAllFabricTaxonomyResponse) {}
	rpc GetCleaningCodes(GetCleaningCodesRequest) returns (GetCleaningCodesResponse) {}
	rpc GetDiscontinuedFabrics(GetDiscontinuedFabricsRequest) returns (GetDiscontinuedFabricsResponse) {}
}

message GetAllFabricsRequest {}

message GetAllFabricsResponse {
	repeated Fabric fabrics = 1;
}

message GetAllFabricsWithoutInventoryRequest {}

message GetAllFabricsWithoutInventoryResponse {
	repeated Fabric fabrics = 1;
}

message GetAllInventoryRequest {}

message GetAllInventoryResponse {
	repeated Inventory inventory = 1;
}

message GetFabricByIDRequest {
	string fabric_id = 1;
}

message GetFabricByIDResponse {
	Fabric fabric = 1;
}

message GetFabricByNameRequest {
	string fabric_name = 1;
}

message GetFabricByNameResponse {
	Fabric fabric = 1;
}

message GetAllFabricTaxonomyRequest {}

message GetAllFabricTaxonomyResponse {
	Taxonomy taxonomy = 1;
}

message GetCleaningCodesRequest {}

message GetCleaningCodesResponse {
	map<string, CleaningCode> cleaning_codes = 1;
}

message GetFabricBySKURequest {
	string fabric_sku = 1;
}

message GetFabricBySKUResponse {
	Fabric fabric = 1;
}

message GetDiscontinuedFabricsRequest {}

message GetDiscontinuedFabricsResponse {
	repeated DiscontinuedFabric fabrics = 1;
}